<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/background_radius_white"

    android:divider="@drawable/empty_tall_divider"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="10dp"
    android:paddingStart="0dp"
    android:paddingEnd="0dp"
    android:showDividers="middle">


    <ImageView
        android:id="@+id/shopcartPhoneImage"
        android:layout_width="131dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:contentDescription="@string/placeholder_phone_name"
        android:maxWidth="200dp"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/phoneName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_phone_name" />

                <TextView
                    android:id="@+id/brandYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_brand_year" />
            </LinearLayout>

            <TextView
                android:id="@+id/shopcartPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:text="@string/price"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/deleteButton"
                style="@style/buttonStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:padding="0dp"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantit" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/shopcartPhoneQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/times1">

            </TextView>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/minusButton"
                style="@style/buttonStyle"
                android:layout_width="40dp"

                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/plusButton"
                style="@style/buttonStyle"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>

